--- a/templates/riba/riba-admin/question/add_question.html
+++ b/templates/riba/riba-admin/question/add_question.html
@@ -1,6 +1,15 @@
 {% extends 'riba-admin/base.html' %}
 {% load question_tags %}
 
+{% block extra_css %}
+<style>
+.form-row select {
+    width: 150px;
+}
+</style>
+{% endblock %}
+
+
 {% block breadcrumbs %}
     <!-- Breadcrumbs -->
     <div class="breadcrumbs">
@@ -9,9 +18,13 @@
     <!-- END Breadcrumbs -->
 {% endblock %}
 
+{%block jquery%}
+{{block.super}}
+<script type="text/javascript" src="/adminmedia/js/tiny_mce/tiny_mce.js"></script>
+{% endblock %}
+
 
 {%block content%}
-	
 <div class="question-details">
     <h1>Add Question</h1>
     {% if errors %}
@@ -29,6 +42,18 @@
                         <div>
                             <label class="required">{{form.question.label}}:</label>
                             {{form.question}}
+                        </div>
+                    </div>
+                    <div class="form-row description">
+                        <div>
+                            <label>{{form.description.label}}:</label>
+                            {{form.description}}
+                        </div>
+                    </div>
+                    <div class="form-row category">
+                        <div>
+                            <label class="required">{{form.category.label}}:</label>
+                            {{form.category}}
                         </div>
                     </div>
                     <div class="form-row answer_type">
@@ -68,6 +93,7 @@
                                         <th>Field label</th>
                                         <th class="required">Field type</th>
                                         <th>Field Option</th>
+                                        <th>Sort Order</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -78,6 +104,7 @@
                                                 <td class="field-label">{{f.field_label}}</td>
                                                 <td class="field-type">{{f.field_type}}</td>
                                                 <td class="field-option">{{f.field_option}}</td>
+                                                <td class="field-sort_order">{{f.sort_order}}</td>
                                             {% endif %}
                                         </tr>
                                     {% endfor %}
