--- a/templates/riba/riba-admin/question/edit_question.html
+++ b/templates/riba/riba-admin/question/edit_question.html
@@ -1,6 +1,23 @@
 {% extends 'riba-admin/base.html' %}
 {% load question_tags %}
 
+{% block extra_css %}
+<style>
+.form-row select {
+    width: 200px;
+}
+
+.form-row input {
+    width: 200px;
+}
+
+#id_is_recurring {
+    width: 15px;
+}
+
+</style>
+{% endblock %}
+
 {% block breadcrumbs %}
     <!-- Breadcrumbs -->
     <div class="breadcrumbs">
@@ -48,12 +65,6 @@
                             {{form.answer_type}}
                         </div>
                     </div>
-                    <div class="form-row type">
-                        <div>
-                            <label>{{form.type.label}}:</label>
-                            {{form.type}}
-                        </div>
-                    </div>
                     <div class="form-row rows text-area hide">
                         <div>
                             <label>{{form.rows.label}}:</label>
@@ -64,6 +75,24 @@
                         <div>
                             <label>{{form.columns.label}}:</label>
                             {{form.columns}}
+                        </div>
+                    </div>
+                    <div class="form-row is_recurring">
+                        <div>
+                            <label>{{form.is_recurring.label}}:</label>
+                            {{form.is_recurring}}
+                        </div>
+                    </div>
+                    <div class="form-row recurring_times recurring">
+                        <div>
+                            <label>{{form.recurring_times.label}}:</label>
+                            {{form.recurring_times}}
+                        </div>
+                    </div>
+                    <div class="form-row recurring_label recurring">
+                        <div>
+                            <label>{{form.recurring_label.label}}:</label>
+                            {{form.recurring_label}}
                         </div>
                     </div>
                 </fieldset>
@@ -181,9 +210,7 @@ $(document).ready(function PreselectMyItem(){
     else{
         $('.text-area').hide();
     }
-});
-
-$(document).ready(function(){
+    
     $('#id_answer_type').change(function(){
         var e = this.value;
         if (e=="textarea"){
@@ -191,6 +218,25 @@ $(document).ready(function(){
         }
         else{
             $('.text-area').hide();
+        }
+    });
+
+    var e = document.getElementById("id_is_recurring");
+    var val = e.checked;
+    if(val == true){
+        $('.recurring').show();
+    }
+    else{
+        $('.recurring').hide();
+    }
+
+    $('#id_is_recurring').change(function(){
+        var val = this.checked;
+        if(val == true){
+            $('.recurring').show();
+        }
+        else{
+            $('.recurring').hide();
         }
     });
 });
