--- a/templates/riba/riba-admin/document/finalize_template.html
+++ b/templates/riba/riba-admin/document/finalize_template.html
@@ -14,6 +14,10 @@
     .form-row input[type="text"] {
         readonly:readonly;
     }
+
+    .question {
+        width: 400px;
+    }
 </style>
 {% endblock %}
 
